--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "immutable": "^3.8.2",
     "mysql2": "^1.6.1",
+    "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.3",
@@ -22,17 +23,18 @@
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.5",
     "reactstrap": "^6.4.0",
     "redis": "^2.8.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
     "sequelize": "^4.38.1",
+    "webpack": "^4.20.2",
     "yarn": "^1.9.4"
   },
   "devDependencies": {
-    "concurrently": "^3.6.1",
-    "webpack": "^4.19.0"
+    "concurrently": "^3.6.1"
   },
   "main": "index.js",
   "author": "",
