- Routing in progress

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.4",
@@ -23,6 +24,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^1.1.5",
     "reactstrap": "^6.4.0",
     "redis": "^2.8.0",
